# ditto

./: .codexignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MINING_PROMPT.md  README.md  ROADMAP.md  SECURITY.md  ditto.py  emulo.py  pyproject.toml  server.json  smithery.yaml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/plugin/: plugin.json
.github/workflows/: hol-plugin-scanner.yml  tests.yml
.viberaven/: production-context.md
.viberaven/plans/: 2026-07-10-ditto-personal-correction-ledger-architecture-plan.md  2026-07-10-ditto-plugin-architecture-plan.md  2026-07-16-emulo-billing-experience-architecture-plan.md  2026-07-17-emulo-account-google-auth-legal-architecture-plan.md  2026-07-17-emulo-continuity-onboarding-architecture-plan.md
cloud/worker/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.jsonc  wrangler.production.jsonc
compat/clawhub/: SKILL.md
compat/ditto-cli/: README.md  ditto_cli_compat.py  pyproject.toml
docs/: OPENCLAW_HERMES.md
docs/proof/: README.md  implementation-verification.md
docs/release/: emulo-polar-production-activation.md  plugin-dogfood.md  plugin-release-draft.md  plugin-viability.md
emulo_autopilot/: __init__.py  cli.py  continuity.py  continuity_crypto.py  continuity_onboarding.py  contracts.py  policy.py  sessions.py  store.py
examples/: unified-system.md  you-video.md  you.md
examples/lenses/: you-working.md
proof/: __init__.py  cli.py  evaluate.py  fixtures.py  manifest.py  pilot.py  privacy.py  publish.py  runner.py  schema.py  store.py
proof/schemas/: benchmark-manifest-v1.json  cell-record-v1.json  publication-v1.json  review-record-v1.json
scripts/: show_sarif.py
site/: index.html  legal.css  llms.txt  privacy.html  refunds.html  robots.txt  sitemap.xml  terms.html
skill/: SKILL.md
skills/: .gitkeep
skills/design/: SKILL.md
skills/mine/: SKILL.md
skills/video/: SKILL.md
skills/work/: SKILL.md
skills/write/: SKILL.md
tests/: autopilot_helpers.py  test_adaptive_recall.py  test_antigravity_source.py  test_autopilot_cli.py  test_autopilot_contracts.py  test_autopilot_policy.py  test_autopilot_sessions.py  test_autopilot_store.py  test_bootstrap.py  test_card_render.py  test_claude_human_turns.py  test_codex_control_envelopes.py  test_codex_log_roots.py  test_continuity.py  test_continuity_crypto.py  test_continuity_onboarding.py  test_ditto.py  test_emulo.py  test_emulo_public_security.py  test_mcp_server.py  test_opencode_source.py  test_plugin_manifests.py  test_plugin_runtime.py  test_profile_store.py  test_proof_cli.py  test_proof_docs.py  test_proof_evaluate.py  test_proof_manifest.py  test_proof_pilot.py  test_proof_privacy.py  test_proof_publish.py  test_proof_runner.py  test_proof_schema.py  test_proof_store.py  test_site_legal.py  test_site_pricing.py
(+73 files in other folders)
